sources/CPP/include/Ers/ErsApiFunctions.h

// Temporary typedef until we found a good place for shared information.
typedef uint64_t EntityID;
    ERS_IMPORT void ERS_Logger_AddCallback(void(*logCallback)(int level, const char* message, void* callbackData), void* callbackData);
    ERS_IMPORT bool ERS_BoxComponent_InCollision_Ray(void* instance, float posX, float posY, float posZ, float dirX, float dirY, float dirZ);
    ERS_IMPORT uint32_t ERS_ChannelComponent_TypeId();
    ERS_IMPORT void ERS_ChannelComponent_RegisterType(void* submodelInstance);
    ERS_IMPORT int ERS_ChannelComponent_GetType(void* instance);
    ERS_IMPORT EntityID ERS_ChannelComponent_GetConnectedTo(void* instance);
    ERS_IMPORT bool ERS_ChannelComponent_IsOpen(void* instance);
    ERS_IMPORT bool ERS_ChannelComponent_IsOpenStatic(EntityID channel);
    ERS_IMPORT bool ERS_Channel_Send(EntityID channelFrom, EntityID child);
    ERS_IMPORT void ERS_Channel_Open(EntityID channel);
    ERS_IMPORT void ERS_Channel_Close(EntityID channel);
    ERS_IMPORT bool ERS_Channel_IsReady(EntityID channel);
    ERS_IMPORT void ERS_Channel_Connect(EntityID channelA, EntityID channelB);
    ERS_IMPORT void ERS_Channel_AddChannelComponent(EntityID channel, int type, EntityID resource);
    ERS_IMPORT uint32_t ERS_GlobalComponentRegistry_RegisterScriptBehavior(const char* name, void*(*CreateInstance)(void* handle), void* handle, void(*OnCreation)(void* scriptBehaviorInstance), void(*OnAwake)(void* scriptBehaviorInstance), void(*OnStart)(void* scriptBehaviorInstance), void(*OnUpdate)(void* scriptBehaviorInstance), void(*OnLateUpdate)(void* scriptBehaviorInstance), void(*OnDestroy)(void* scriptBehaviorInstance), void(*OnEntering)(void* scriptBehaviorInstance, EntityID child), void(*OnEntered)(void* scriptBehaviorInstance, EntityID child), void(*OnExiting)(void* scriptBehaviorInstance, EntityID child), void(*OnExited)(void* scriptBehaviorInstance, EntityID child), void(*OnInputChannelReady)(void* scriptBehaviorInstance, EntityID inputChannel), void(*OnOutputChannelReady)(void* scriptBehaviorInstance, EntityID outputChannel), void(*OnReceive)(void* scriptBehaviorInstance, EntityID inputChannel, EntityID child), void(*Serialization)(void* scriptBehaviorInstance, void* serializer), void(*OnSubModelMove)(void* scriptBehaviorInstance, EntityID newConnectedEntity));
    ERS_IMPORT uint32_t ERS_GlobalComponentRegistry_RegisterComponent(const char* name, size_t sz, void* typeInfoPtr, void* customSerialize);
    ERS_IMPORT bool ERS_GlobalComponentRegistry_IsRegistered(uint32_t componentID);
    ERS_IMPORT uint32_t ERS_NameComponent_TypeId();
    ERS_IMPORT const char* ERS_NameComponent_GetName(void* nameComponentPointer);
    ERS_IMPORT void ERS_NameComponent_SetName(void* nameComponentPointer, const char* newName, int newNameSize);
    ERS_IMPORT uint32_t ERS_OutlineComponent_TypeId();
    ERS_IMPORT float ERS_OutlineComponent_Get_Center_X(void* instance);
    ERS_IMPORT void ERS_OutlineComponent_Set_Center_X(void* instance, float x);
    ERS_IMPORT float ERS_OutlineComponent_Get_Center_Y(void* instance);
    ERS_IMPORT void ERS_OutlineComponent_Set_Center_Y(void* instance, float y);
    ERS_IMPORT float ERS_OutlineComponent_Get_Center_Z(void* instance);
    ERS_IMPORT void ERS_OutlineComponent_Set_Center_Z(void* instance, float z);
    ERS_IMPORT float ERS_OutlineComponent_Get_Dimensions_X(void* instance);
    ERS_IMPORT float ERS_OutlineComponent_Get_Dimensions_Y(void* instance);
    ERS_IMPORT float ERS_OutlineComponent_Get_Dimensions_Z(void* instance);
    ERS_IMPORT void ERS_OutlineComponent_Set_Dimensions(void* instance, float dimsX, float dimsY, float dimsZ);
    ERS_IMPORT uint32_t ERS_PathComponent_TypeId();
    ERS_IMPORT void* ERS_PathComponent_GetSegment(void* instance, int index);
    ERS_IMPORT int ERS_PathComponent_GetNumSegments(void* instance);
    ERS_IMPORT void ERS_PathComponent_AddStraight(void* instance, float fromX, float fromY, float fromZ, float toX, float toY, float toZ);
    ERS_IMPORT void ERS_PathComponent_AddHelical(void* instance, float centerX, float centerY, float centerZ, float radius, float beginAngle, float endAngle, float endZ);
    ERS_IMPORT void ERS_PathComponent_AddCubicBezier(void* instance, float p0X, float p0Y, float p0Z, float p1X, float p1Y, float p1Z, float p2X, float p2Y, float p2Z, float p3X, float p3Y, float p3Z);
    ERS_IMPORT void ERS_PathComponent_AddCubicBezierFromDirections(void* instance, float startX, float startY, float startZ, float startDirX, float startDirY, float startDirZ, float endX, float endY, float endZ, float endDirX, float endDirY, float endDirZ, float curvature);
    ERS_IMPORT uint32_t ERS_RelationComponent_TypeId();
    ERS_IMPORT void ERS_RelationComponent_RegisterType(void* submodelInstance);
    ERS_IMPORT EntityID ERS_RelationComponent_GetParent(void* relationComponent);
    ERS_IMPORT EntityID ERS_RelationComponent_GetFirst(void* relationComponent);
    ERS_IMPORT EntityID ERS_RelationComponent_GetLast(void* relationComponent);
    ERS_IMPORT EntityID ERS_RelationComponent_GetPrevious(void* relationComponent);
    ERS_IMPORT EntityID ERS_RelationComponent_GetNext(void* relationComponent);
    ERS_IMPORT uint32_t ERS_RelationComponent_GetChildCount(void* relationComponent);
    ERS_IMPORT uint32_t ERS_RenderComponent_TypeId();
    ERS_IMPORT uint8_t ERS_RenderComponent_GetShape(void* instance);
    ERS_IMPORT void ERS_RenderComponent_SetShape(void* instance, uint8_t shape);
    ERS_IMPORT uint32_t ERS_RenderComponent_GetColor(void* instance);
    ERS_IMPORT void ERS_RenderComponent_SetColor(void* instance, uint32_t color);
    ERS_IMPORT void* ERS_RenderComponent_GetTexture2D(void* instance);
    ERS_IMPORT void ERS_RenderComponent_SetTexture2D(void* instance, void* texturePtr);
    ERS_IMPORT void ERS_RenderComponent_RemoveTexture2D(void* instance);
    ERS_IMPORT void ERS_RenderComponent_SetInstancedModel(void* instance, void* instancedModel);
    ERS_IMPORT void* ERS_RenderComponent_GetInstancedModel(void* instance);
    ERS_IMPORT uint32_t ERS_ResourceComponent_TypeId();
    ERS_IMPORT void ERS_ResourceComponent_RegisterType(void* submodelInstance);
    ERS_IMPORT size_t ERS_ResourceComponent_GetNumInputChannels(void* instance);
    ERS_IMPORT size_t ERS_ResourceComponent_GetNumOutputChannels(void* instance);
    ERS_IMPORT void* ERS_EventScheduler_RegisterLocalEventType(uint64_t typeIdentifier, void(*callback)(void* data), void(*destructor)(void* data), void(*serialize)(void* data, void* serializerHandle), void*(*allocator)(), const char* uniqueName, const char* sourceLibrary, size_t size, const char* filePath, int lineNumber);
    ERS_IMPORT void* ERS_EventScheduler_RegisterSyncEventType(uint64_t eventTypeIdentifier, void(*onSenderSideCallback)(), void(*onTargetSideCallback)(), void(*serializeData)(void* dataContext, void* serializerHandle), uint32_t dataBlockSize, const char* name, const char* sourceLibrary, const char* filePath, int lineNumber);
    ERS_IMPORT void ERS_SubModel_AddSubModelContext(void* subModelHandle, uint32_t SubModelContextTypeIdx, const char* name, void* SubModelContextPtr, void(*destructor)(void* contextHandle));