sources/CSharp/src/ErsApiFunctions.cs


        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_BoxComponent_InCollision_Ray(IntPtr instance, float posX, float posY, float posZ, float dirX, float dirY, float dirZ);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt32 ERS_ChannelComponent_TypeId();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ChannelComponent_RegisterType(IntPtr submodelInstance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ERS_ChannelComponent_GetType(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern Entity ERS_ChannelComponent_GetConnectedTo(IntPtr instance);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_ChannelComponent_IsOpen(IntPtr instance);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_ChannelComponent_IsOpenStatic(Entity channel);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_Channel_Send(Entity channelFrom, Entity child);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Channel_Open(Entity channel);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Channel_Close(Entity channel);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_Channel_IsReady(Entity channel);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Channel_Connect(Entity channelA, Entity channelB);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Channel_AddChannelComponent(Entity channel, int type, Entity resource);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe UInt32 ERS_GlobalComponentRegistry_RegisterScriptBehavior(/* ASCII String */ byte* name, delegate* unmanaged[Cdecl]<IntPtr, IntPtr> CreateInstance, IntPtr handle, delegate* unmanaged[Cdecl]<IntPtr, void> OnCreation, delegate* unmanaged[Cdecl]<IntPtr, void> OnAwake, delegate* unmanaged[Cdecl]<IntPtr, void> OnStart, delegate* unmanaged[Cdecl]<IntPtr, void> OnUpdate, delegate* unmanaged[Cdecl]<IntPtr, void> OnLateUpdate, delegate* unmanaged[Cdecl]<IntPtr, void> OnDestroy, delegate* unmanaged[Cdecl]<IntPtr, Entity, void> OnEntering, delegate* unmanaged[Cdecl]<IntPtr, Entity, void> OnEntered, delegate* unmanaged[Cdecl]<IntPtr, Entity, void> OnExiting, delegate* unmanaged[Cdecl]<IntPtr, Entity, void> OnExited, delegate* unmanaged[Cdecl]<IntPtr, Entity, void> OnInputChannelReady, delegate* unmanaged[Cdecl]<IntPtr, Entity, void> OnOutputChannelReady, delegate* unmanaged[Cdecl]<IntPtr, Entity, Entity, void> OnReceive, delegate* unmanaged[Cdecl]<IntPtr, IntPtr, void> Serialization, delegate* unmanaged[Cdecl]<IntPtr, Entity, void> OnSubModelMove);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe UInt32 ERS_GlobalComponentRegistry_RegisterComponent(/* ASCII String */ byte* name, nuint sz, IntPtr typeInfoPtr, IntPtr customSerialize);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_GlobalComponentRegistry_IsRegistered(UInt32 componentID);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt32 ERS_NameComponent_TypeId();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_NameComponent_GetName(IntPtr nameComponentPointer);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe void ERS_NameComponent_SetName(IntPtr nameComponentPointer, /* ASCII String */ byte* newName, int newNameSize);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt32 ERS_OutlineComponent_TypeId();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_OutlineComponent_Get_Center_X(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_OutlineComponent_Set_Center_X(IntPtr instance, float x);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_OutlineComponent_Get_Center_Y(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_OutlineComponent_Set_Center_Y(IntPtr instance, float y);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_OutlineComponent_Get_Center_Z(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_OutlineComponent_Set_Center_Z(IntPtr instance, float z);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_OutlineComponent_Get_Dimensions_X(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_OutlineComponent_Get_Dimensions_Y(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_OutlineComponent_Get_Dimensions_Z(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_OutlineComponent_Set_Dimensions(IntPtr instance, float dimsX, float dimsY, float dimsZ);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt32 ERS_PathComponent_TypeId();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_PathComponent_GetSegment(IntPtr instance, int index);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ERS_PathComponent_GetNumSegments(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_PathComponent_AddStraight(IntPtr instance, float fromX, float fromY, float fromZ, float toX, float toY, float toZ);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_PathComponent_AddHelical(IntPtr instance, float centerX, float centerY, float centerZ, float radius, float beginAngle, float endAngle, float endZ);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_PathComponent_AddCubicBezier(IntPtr instance, float p0X, float p0Y, float p0Z, float p1X, float p1Y, float p1Z, float p2X, float p2Y, float p2Z, float p3X, float p3Y, float p3Z);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_PathComponent_AddCubicBezierFromDirections(IntPtr instance, float startX, float startY, float startZ, float startDirX, float startDirY, float startDirZ, float endX, float endY, float endZ, float endDirX, float endDirY, float endDirZ, float curvature);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt32 ERS_RelationComponent_TypeId();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_RelationComponent_RegisterType(IntPtr submodelInstance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern Entity ERS_RelationComponent_GetParent(IntPtr relationComponent);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern Entity ERS_RelationComponent_GetFirst(IntPtr relationComponent);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern Entity ERS_RelationComponent_GetLast(IntPtr relationComponent);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern Entity ERS_RelationComponent_GetPrevious(IntPtr relationComponent);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern Entity ERS_RelationComponent_GetNext(IntPtr relationComponent);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt32 ERS_RelationComponent_GetChildCount(IntPtr relationComponent);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt32 ERS_RenderComponent_TypeId();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern byte ERS_RenderComponent_GetShape(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_RenderComponent_SetShape(IntPtr instance, byte shape);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt32 ERS_RenderComponent_GetColor(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_RenderComponent_SetColor(IntPtr instance, UInt32 color);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_RenderComponent_GetTexture2D(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_RenderComponent_SetTexture2D(IntPtr instance, IntPtr texturePtr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_RenderComponent_RemoveTexture2D(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_RenderComponent_SetInstancedModel(IntPtr instance, IntPtr instancedModel);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_RenderComponent_GetInstancedModel(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt32 ERS_ResourceComponent_TypeId();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ResourceComponent_RegisterType(IntPtr submodelInstance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint ERS_ResourceComponent_GetNumInputChannels(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint ERS_ResourceComponent_GetNumOutputChannels(IntPtr instance);
